# industrial-safety-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  thresholds.json
dashboard/: app.js  index.html
docs/: eval_results.md
engine/: baseline.py  config.py  eval.py  main.py  risk_rules.py
orchestrator/: alert_orchestrator.py
rag/: ingest.py  query_agent.py
rag/corpus/: factories_act_1948_hazardous_processes.md  oisd_std_105_summary.md  oisd_std_163_summary.md  synthetic_near_misses.json
simulator/: generate.py  scenario.py  zones.json
