[project]
name = "industrial-safety-intelligence"
version = "0.1.0"
description = "AI-powered compound-risk detection for industrial safety (ET AI Hackathon 2026, PS#1)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "motor>=3.6",
    "pymongo>=4.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "websockets>=13.1",
    "httpx>=0.27",
    "anthropic>=0.39",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.2",
    "pypdf>=5.0",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "rich>=13.9",
]

[tool.uv]
package = false
